--- a/assets/index.html
+++ b/assets/index.html
@@ -21,13 +21,13 @@
       <div class="ct" id="t2">
         <div class="ct" id="t3">
           <ul>
-            <a href="">
+            <a href="#t1">
               <li class="icon fa fa-bolt"></li>
             </a>
-            <a href="">
+            <a href="#t2">
               <li class="icon fa fa-rocket"></li>
             </a>
-            <a href="">
+            <a href="#t3">
               <li class="icon fa fa-plus-circle"></li>
             </a>
           </ul>
